overflow fixes and footer layout grid

--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,7 @@
     margin: 0;
     padding: 0;
     overscroll-behavior: none;
-    overscroll-behavior-x: none;
-    overflow-x: hidden;
 }
-
 .divider {
     height: 325px;
     width: 100%;
@@ -347,7 +344,7 @@ nav ul li a:hover {
     }
 
     .intro .intro-info {
-        width: 85%;
+        width: 90%;
         margin-left: 2rem;
     }
 
@@ -461,23 +458,25 @@ nav ul li a:hover {
         display: grid;
         grid-template-rows: 1fr 1fr 1fr;
         grid-template-columns: 1fr;
+        grid-template-areas: "contact"
+                             "hours"
+                             "logo";
         padding: 0;
         place-items: center;
     }
 
     .footer .contact-info {
-        grid-column: 1 / span 1;
-        grid-row: 1 / 2;
+        grid-area: contact;
         margin: 0;
     }
 
     .footer .hours {
-        grid-row: 2 / 3;
         margin: 0;
+        grid-area: hours;
     }
 
-    .footer-logo {
-        grid-row: 3 / 4;
+    .footer .footer-logo {
+        grid-area: logo;
         margin: 0;
     }
 }
